--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-Flask==1.0.2
-Flask-Markdown
-Flask-Misaka
-Flask-QRcode
-flask_wtf
-pygal==2.1.1
-globus-sdk==1.7.1
-pyyaml
+blinker==1.7.0
+cffi==1.16.0
+click==8.1.7
+Flask==3.0.0
+Flask-Misaka==1.0.1
+Flask-WTF==1.2.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+misaka==2.1.1
+pycparser==2.21
+Werkzeug==3.0.1
+WTForms==3.1.1
