--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,56 @@
-blinker==1.7.0
-cachetools==5.3.2
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-Flask==3.0.0
-Flask-Misaka==1.0.1
-Flask-WTF==1.2.1
-google-auth==2.25.2
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kubernetes==28.1.0
-MarkupSafe==2.1.3
-misaka==2.1.1
-oauthlib==3.2.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-python-dateutil==2.8.2
-PyYAML==6.0.1
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
-urllib3==1.26.18
-websocket-client==1.7.0
-Werkzeug==3.0.1
-WTForms==3.1.1
+astroid
+black
+blinker
+cachetools
+certifi
+cffi
+charset-normalizer
+click
+cryptography
+cycler
+dill
+Flask
+Flask-Misaka
+Flask-QRcode
+Flask-WTF
+fonttools
+globus-sdk
+google-auth
+idna
+isort
+itsdangerous
+Jinja2
+kiwisolver
+kubernetes
+MarkupSafe
+matplotlib
+mccabe
+misaka
+mypy-extensions
+numpy
+oauthlib
+packaging
+pathspec
+Pillow
+platformdirs
+pyasn1
+pyasn1-modules
+pycparser
+PyJWT
+pylint
+pyparsing
+pypng
+python-dateutil
+PyYAML
+qrcode
+requests
+requests-oauthlib
+rsa
+six
+tomlkit
+typing_extensions
+urllib3
+websocket-client
+Werkzeug
+WTForms
+
