--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,60 @@
-Flask==1.0.2
-Flask-Markdown
-Flask-Misaka
-Flask-QRcode
-flask_wtf
-pygal==2.1.1
-globus-sdk==1.7.1
-pyyaml
+astroid==3.2.2
+black==24.4.2
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.6.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+contourpy==1.2.1
+cryptography==42.0.8
+cycler==0.12.1
+dill==0.3.8
+Flask==3.0.3
+Flask-Misaka==1.0.1
+Flask-QRcode==3.2.0
+Flask-WTF==1.2.1
+fonttools==4.53.0
+globus-sdk==3.41.0
+google-auth==2.30.0
+idna==3.7
+importlib_metadata==8.0.0
+importlib_resources==6.4.0
+isort==5.13.2
+itsdangerous==2.2.0
+Jinja2==3.1.4
+kiwisolver==1.4.5
+kubernetes==30.1.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+mccabe==0.7.0
+misaka==2.1.1
+mypy-extensions==1.0.0
+numpy==2.0.0
+oauthlib==3.2.2
+packaging==24.1
+pathspec==0.12.1
+pillow==10.3.0
+platformdirs==4.2.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+PyJWT==2.8.0
+pylint==3.2.4
+pyparsing==3.1.2
+pypng==0.20220715.0
+python-dateutil==2.9.0.post0
+PyYAML==6.0.1
+qrcode==7.4.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+six==1.16.0
+tomli==2.0.1
+tomlkit==0.12.5
+typing_extensions==4.12.2
+urllib3==2.2.2
+websocket-client==1.8.0
+Werkzeug==3.0.3
+WTForms==3.1.2
+zipp==3.19.2
